--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,10 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "SMS.autosmsreceiver"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
